--- a/vehicle/src/main/resources/static/views/capacity.html
+++ b/vehicle/src/main/resources/static/views/capacity.html
@@ -1,18 +1,18 @@
 <div ng-controller="CapController">
-<center style="color:blue;" size =18>Capacity Details</center>
+<center style="color:blue;" size =28><h1>Capacity Details</h1></center>
 	<table class="table table-striped" border="1">
 		<tr>
-			<th>TwoCapacity</th>
-			<th>FourCapity</th>
-			<th>TwoCost</th>
-			<th>FourCost</th>
+			<th><h4>TwoCapacity</h4></th>
+			<th><h4>FourCapity</h4></th>
+			<th><h4>TwoCost</h4></th>
+			<th><h4>FourCost</h4></th>
 		</tr>
 		<tr>
-			<td>{{ vData.two }}</td>
-			<td>{{ vData.four }}</td>
-			<td>{{ vData.twoCost }}</td>
-			<td>{{ vData.fourCost }}</td>
+			<td><h4>{{ vData.two }}</h4></td>
+			<td><h4>{{ vData.four }}</h4></td>
+			<td><h4>{{ vData.twoCost }}</h4></td>
+			<td><h4>{{ vData.fourCost }}</h4></td>
 		</tr>
 	</table>
-	<center><a href="#/">Park</a></center>
+	<center><h4><a href="#/">Park</a></h4></center>
 </div>
