--- a/vehicle/src/main/resources/static/views/vehicleId.html
+++ b/vehicle/src/main/resources/static/views/vehicleId.html
@@ -2,11 +2,11 @@
 	<table>
 		<tr>
 			<td>Enter VehicleId:</td>
-			<td><input type="text" ng-model="vehicleId" /></td>
+			<td><h1><input type="text" ng-model="vehicleId" /></h1></td>
 		</tr>
 		<tr>
 			<td></td>
-			<td><button value="Search" ng-click="SearchCall()"><img alt="" src="images/exit3.png" size =14></button></td>
+			<td><button value="Search" ng-click="SearchCall()"><img alt="" src="/images/exit3.png" size =14></button></td>
 		</tr>
 	</table>
 </div>
