--- a/vehicle/static/css/app.css
+++ b/vehicle/static/css/app.css
@@ -1,15 +1,69 @@
 .menu-list{
     padding-left: 30px;
     padding-top: 20px;
+    color:white;
+    text-align:left;
+    width: 50%;
 }
-.home-section{
-    float:left;
-    width: 10%;
-}
+
+
 .section{
-    margin-left: 10%;
+    margin-left: 100%;
     float:left;
-}
-.photo{
+} 
+/* .photo{
     padding-right: 5px;
+} */
+.header {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: 190px 120px
+    background-image: url(/images/3.jpg);
+ 
+}
+
+ .left-side {
+	
+    position: fixed;
+    left: 0;
+    top: 110px;
+  /*   width: 200px;
+    height:1300%; */
+}
+
+/* .right-side {
+    background-color:white;
+    position: fixed;
+    right: 0;
+    top: 50px;
+    width: 150px;
+    height: 100%;
+    overflow: hidden;
+} */
+
+.footer {
+    position: fixed;
+    bottom: 100;
+    left: 150;
+    width: 100%;
+    height: 50px;
+  font-style:black;
+    font-size: "16";
+}
+
+/* .page-layer{
+    position:relative;
+    padding: 50px 0 50px 0;
+    margin: 0 50px 0 50px;
+    min-height: 100%;
+}
+ */
+.page {
+    background-color: #fff;
+    box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.8);
+    width:100%;
 }
