Modified the UI

--- a/vehicle/src/main/resources/static/views/vehicleId.html
+++ b/vehicle/src/main/resources/static/views/vehicleId.html
@@ -6,7 +6,7 @@
 		</tr>
 		<tr>
 			<td></td>
-			<td><button value="Search" ng-click="SearchCall()"><img alt="" src="/images/exit3.png" size =14></button></td>
+			<td><button value="Search" ng-click="SearchCall()"><img alt="" src="images/exit3.png" size =14></button></td>
 		</tr>
 	</table>
 </div>
