--- a/vehicle/src/main/resources/static/views/vehicleParking.html
+++ b/vehicle/src/main/resources/static/views/vehicleParking.html
@@ -24,8 +24,8 @@
 		</tr>
 
 		<tr>
-			<td><button ng-click="parkCall()"><img alt="" src="/images/park3.png" size =30></button></td>
-			<td><button ng-click="reset()"><img alt="" src="/images/reset3.png" size =30></button></td>
+			<td><button ng-click="parkCall()"><img alt="" src="images/park3.png" size =30></button></td>
+			<td><button ng-click="reset()"><img alt="" src="images/reset3.png" size =30></button></td>
 		</tr>
 
 	</table>
